--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navbar">
+      <nav class="navbar inter-font">
         <div class="nav-image">
           <figure>
             <img
@@ -48,7 +48,7 @@
           <div class="banner-title noto-serif-font">
             <span class="orange">FLOWERS</span>
           </div>
-          <div class="banner-description">
+          <div class="banner-description inter-font">
             Indulge your senses with the beauty and fragrance of our fresh
             flower shop. From classic roses to exotic blooms, we offer a wide
             variety of fresh flowers that are perfect for any occasion.
@@ -58,7 +58,215 @@
           <img src="./assets/hero-flower.png" alt="a bouquet of flower" />
         </div>
       </section>
+      <section class="plants">
+        <div class="plant-info">
+          <div class="plant-title title">
+            <span class="orange">Our</span> Plants
+          </div>
+          <div class="plant-description description inter-font">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From <br />
+            classic roses to exotic blooms, we offer a wide variety of fresh.
+          </div>
+        </div>
+        <div class="plant-card-container inter-font">
+          <div class="card">
+            <div class="card-image-container">
+              <img
+                src="./assets/sample-flower-image.png"
+                alt="sample flower image"
+                class="card-image"
+              />
+            </div>
+            <div class="card-description">
+              <div class="card-info">
+                <div class="card-name">Lily Blossom</div>
+                <div class="card-price">20 USD</div>
+              </div>
+              <div class="card-button-container">
+                <button class="card-button">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image-container">
+              <img
+                src="./assets/sample-flower-image.png"
+                alt="sample flower image"
+                class="card-image"
+              />
+            </div>
+            <div class="card-description">
+              <div class="card-info">
+                <div class="card-name">Lily Blossom</div>
+                <div class="card-price">20 USD</div>
+              </div>
+              <div class="card-button-container">
+                <button class="card-button">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image-container">
+              <img
+                src="./assets/sample-flower-image.png"
+                alt="sample flower image"
+                class="card-image"
+              />
+            </div>
+            <div class="card-description">
+              <div class="card-info">
+                <div class="card-name">Lily Blossom</div>
+                <div class="card-price">20 USD</div>
+              </div>
+              <div class="card-button-container">
+                <button class="card-button">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image-container">
+              <img
+                src="./assets/sample-flower-image.png"
+                alt="sample flower image"
+                class="card-image"
+              />
+            </div>
+            <div class="card-description">
+              <div class="card-info">
+                <div class="card-name">Lily Blossom</div>
+                <div class="card-price">20 USD</div>
+              </div>
+              <div class="card-button-container">
+                <button class="card-button">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image-container">
+              <img
+                src="./assets/sample-flower-image.png"
+                alt="sample flower image"
+                class="card-image"
+              />
+            </div>
+            <div class="card-description">
+              <div class="card-info">
+                <div class="card-name">Lily Blossom</div>
+                <div class="card-price">20 USD</div>
+              </div>
+              <div class="card-button-container">
+                <button class="card-button">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image-container">
+              <img
+                src="./assets/sample-flower-image.png"
+                alt="sample flower image"
+                class="card-image"
+              />
+            </div>
+            <div class="card-description">
+              <div class="card-info">
+                <div class="card-name">Lily Blossom</div>
+                <div class="card-price">20 USD</div>
+              </div>
+              <div class="card-button-container">
+                <button class="card-button">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image-container">
+              <img
+                src="./assets/sample-flower-image.png"
+                alt="sample flower image"
+                class="card-image"
+              />
+            </div>
+            <div class="card-description">
+              <div class="card-info">
+                <div class="card-name">Lily Blossom</div>
+                <div class="card-price">20 USD</div>
+              </div>
+              <div class="card-button-container">
+                <button class="card-button">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image-container">
+              <img
+                src="./assets/sample-flower-image.png"
+                alt="sample flower image"
+                class="card-image"
+              />
+            </div>
+            <div class="card-description">
+              <div class="card-info">
+                <div class="card-name">Lily Blossom</div>
+                <div class="card-price">20 USD</div>
+              </div>
+              <div class="card-button-container">
+                <button class="card-button">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="plant-lover">
+        <div class="plant-lover-image-container">
+          <img
+            src="./assets/flower-store.png"
+            class="plant-lover-image"
+            alt="plant lover"
+          />
+        </div>
+        <div class="plant-lover-info inter-font">
+          <div class="plant-lover-title">
+            <h2 class="title noto-serif-font">Flower & Plants <br />Lover</h2>
+          </div>
+          <div class="plant-lover-description">
+            <ul>
+              <li class="plant-lover-items description">
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </li>
+              <li class="plant-lover-items description">
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </li>
+              <li class="plant-lover-items description">
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="join">
+        <div class="join-info">
+          <div class="join-title title">
+            <h2 class="noto-serif-font">Join the colorful Bunch</h2>
+          </div>
+          <div class="input-field inter-font">
+            <div class="join-input">
+              <input type="email" placeholder="Write email" />
+            </div>
+            <div class="join-button">
+              <button class="inter-font">Subscribe</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        
+    </footer>
   </body>
 </html>
