finish overall requirements

--- a/index.html
+++ b/index.html
@@ -266,7 +266,50 @@
       </section>
     </main>
     <footer class="footer">
-        
+      <div class="footer-logo">
+        <div class="footer-logo-container">
+          <img src="./assets/logo.png" alt="" />
+        </div>
+        <div class="logo-description">
+          <p class="description">
+            Indulge your senses with the <br />beauty and fragrance of our fresh
+            <br />
+            flower shop.
+          </p>
+        </div>
+      </div>
+      <div class="footer-links-1">
+        <ul class="footer-ul">
+          <li class="footer-link"><a href="">Home</a></li>
+          <li class="footer-link"><a href="">About Us</a></li>
+          <li class="footer-link"><a href="">Blog</a></li>
+          <li class="footer-link"><a href="">FAQ</a></li>
+          <li class="footer-link"><a href="">Contact Us</a></li>
+        </ul>
+      </div>
+      <div class="footer-links-2">
+        <ul class="footer-ul">
+          <li class="footer-link"><a href="">Features</a></li>
+          <li class="footer-link"><a href="">Pricing</a></li>
+          <li class="footer-link"><a href="">Privacy Policy</a></li>
+          <li class="footer-link"><a href="">Terms of Service</a></li>
+          <li class="footer-link"><a href="">Help Center</a></li>
+        </ul>
+      </div>
+      <div class="footer-icons-container">
+        <div class="footer-icon">
+          <img src="./assets/icon-linkedin.png" alt="" />
+        </div>
+        <div class="footer-icon">
+          <img src="./assets/icon-twitter.png" alt="" />
+        </div>
+        <div class="footer-icon">
+          <img src="./assets/icon-facebook.png" alt="" />
+        </div>
+        <div class="footer-icon">
+          <img src="./assets/icon-youtube.png" alt="" />
+        </div>
+      </div>
     </footer>
   </body>
 </html>
