finish all the layouts

--- a/index.html
+++ b/index.html
@@ -216,6 +216,47 @@
           </div>
         </div>
       </section>
+      <section class="latest-deals">
+        <div class="deals-container">
+          <div class="deal-title">
+            <h2 class="title noto-serif-font">
+              <span class="orange">Latest</span> Deals
+            </h2>
+          </div>
+          <div class="deal-description description inter-font">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From <br />
+            classic roses to exotic blooms, we offer a wide variety of fresh.
+          </div>
+        </div>
+      </section>
+      <section class="offer">
+        <div class="offer-image-container-1">
+          <div class="offer-image-title noto-serif-font">
+            60% Off | Bloom Plant
+          </div>
+          <div class="offer-image-anchor">
+            <a href="#" class="inter-font">Shop Now</a>
+          </div>
+        </div>
+        <div class="offer-image-container-2">
+          <div class="offer-image-title noto-serif-font">
+            30% Off | Ana Plant
+          </div>
+          <div class="offer-image-anchor">
+            <a href="#" class="inter-font">Shop Now</a>
+          </div>
+        </div>
+
+        <div class="offer-image-container-3">
+          <div class="offer-image-title-large noto-serif-font">
+            25% Off | Zabo Plant
+          </div>
+          <div class="offer-image-anchor-large">
+            <a href="#" class="inter-font">Shop Now</a>
+          </div>
+        </div>
+      </section>
       <section class="plant-lover">
         <div class="plant-lover-image-container">
           <img
@@ -223,6 +264,9 @@
             class="plant-lover-image"
             alt="plant lover"
           />
+          <div class="trusted-badge">
+            <img src="./assets/trusted-badge.png" alt="" />
+          </div>
         </div>
         <div class="plant-lover-info inter-font">
           <div class="plant-lover-title">
@@ -251,8 +295,8 @@
       </section>
       <section class="join">
         <div class="join-info">
-          <div class="join-title title">
-            <h2 class="noto-serif-font">Join the colorful Bunch</h2>
+          <div class="join-title title noto-serif-font">
+            Join the colorful Bunch
           </div>
           <div class="input-field inter-font">
             <div class="join-input">
