complete basic responsive layout

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </div>
         <div>
           <ul class="nav-items-container">
-            <li class="nav-item"><a href="#">Home</a></li>
-            <li class="nav-item"><a href="#">Shop</a></li>
-            <li class="nav-item"><a href="#">About Us</a></li>
+            <li class="nav-item hide"><a href="#">Home</a></li>
+            <li class="nav-item hide"><a href="#">Shop</a></li>
+            <li class="nav-item hide"><a href="#">About Us</a></li>
             <li class="nav-item">
               <a href="#"
                 ><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</a
@@ -216,16 +216,54 @@
           </div>
         </div>
       </section>
+      <section class="plant-lover">
+        <div class="plant-lover-image-container">
+          <img
+            src="./assets/flower-store.png"
+            class="plant-lover-image"
+            alt="plant lover"
+          />
+          <div class="trusted-badge hide">
+            <img src="./assets/trusted-badge.png" alt="" />
+          </div>
+        </div>
+        <div class="plant-lover-info inter-font">
+          <div class="plant-lover-title title noto-serif-font">
+            <!-- <h2 class=""> -->
+            Flower & Plants <br class="hide" />Lover
+            <!-- </h2> -->
+          </div>
+          <div class="plant-lover-description">
+            <ul>
+              <li class="plant-lover-items description">
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </li>
+              <li class="plant-lover-items description">
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </li>
+              <li class="plant-lover-items description">
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
       <section class="latest-deals">
         <div class="deals-container">
-          <div class="deal-title">
-            <h2 class="title noto-serif-font">
-              <span class="orange">Latest</span> Deals
-            </h2>
+          <div class="deal-title title noto-serif-font">
+            <!-- <h2 class="title noto-serif-font"> -->
+            <span class="orange">Latest</span> Deals
+            <!-- </h2> -->
           </div>
           <div class="deal-description description inter-font">
             Indulge your senses with the beauty and fragrance of our fresh
-            flower shop. From <br />
+            flower shop. From <br class="hide" />
             classic roses to exotic blooms, we offer a wide variety of fresh.
           </div>
         </div>
@@ -257,42 +295,7 @@
           </div>
         </div>
       </section>
-      <section class="plant-lover">
-        <div class="plant-lover-image-container">
-          <img
-            src="./assets/flower-store.png"
-            class="plant-lover-image"
-            alt="plant lover"
-          />
-          <div class="trusted-badge">
-            <img src="./assets/trusted-badge.png" alt="" />
-          </div>
-        </div>
-        <div class="plant-lover-info inter-font">
-          <div class="plant-lover-title">
-            <h2 class="title noto-serif-font">Flower & Plants <br />Lover</h2>
-          </div>
-          <div class="plant-lover-description">
-            <ul>
-              <li class="plant-lover-items description">
-                Indulge your senses with the beauty and fragrance of our fresh
-                flower shop. From classic roses to exotic blooms, we offer a
-                wide variety of fresh.
-              </li>
-              <li class="plant-lover-items description">
-                Indulge your senses with the beauty and fragrance of our fresh
-                flower shop. From classic roses to exotic blooms, we offer a
-                wide variety of fresh.
-              </li>
-              <li class="plant-lover-items description">
-                Indulge your senses with the beauty and fragrance of our fresh
-                flower shop. From classic roses to exotic blooms, we offer a
-                wide variety of fresh.
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
+
       <section class="join">
         <div class="join-info">
           <div class="join-title title noto-serif-font">
