font size clear

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="plant-title title">
             <span class="orange">Our</span> Plants
           </div>
-          <div class="plant-description description inter-font">
+          <div class="plant-description description inter-font small-desc">
             Indulge your senses with the beauty and fragrance of our fresh
             flower shop. From <br />
             classic roses to exotic blooms, we offer a wide variety of fresh.
@@ -229,23 +229,21 @@
         </div>
         <div class="plant-lover-info inter-font">
           <div class="plant-lover-title title noto-serif-font">
-            <!-- <h2 class=""> -->
             Flower & Plants <br class="hide" />Lover
-            <!-- </h2> -->
           </div>
           <div class="plant-lover-description">
             <ul>
-              <li class="plant-lover-items description">
+              <li class="plant-lover-items small-desc description">
                 Indulge your senses with the beauty and fragrance of our fresh
                 flower shop. From classic roses to exotic blooms, we offer a
                 wide variety of fresh.
               </li>
-              <li class="plant-lover-items description">
+              <li class="plant-lover-items small-desc description">
                 Indulge your senses with the beauty and fragrance of our fresh
                 flower shop. From classic roses to exotic blooms, we offer a
                 wide variety of fresh.
               </li>
-              <li class="plant-lover-items description">
+              <li class="plant-lover-items small-desc description">
                 Indulge your senses with the beauty and fragrance of our fresh
                 flower shop. From classic roses to exotic blooms, we offer a
                 wide variety of fresh.
@@ -256,12 +254,10 @@
       </section>
       <section class="latest-deals">
         <div class="deals-container">
-          <div class="deal-title title noto-serif-font">
-            <!-- <h2 class="title noto-serif-font"> -->
+          <div class="deal-title title small-title noto-serif-font">
             <span class="orange">Latest</span> Deals
-            <!-- </h2> -->
           </div>
-          <div class="deal-description description inter-font">
+          <div class="deal-description description small-desc inter-font">
             Indulge your senses with the beauty and fragrance of our fresh
             flower shop. From <br class="hide" />
             classic roses to exotic blooms, we offer a wide variety of fresh.
@@ -295,7 +291,6 @@
           </div>
         </div>
       </section>
-
       <section class="join">
         <div class="join-info">
           <div class="join-title title noto-serif-font">
